# emacs-launchers

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  aliases.sh  emacs-daemon  emacs-daemon-blocking  emacs-daemon-core  emacs-daemon-dired  emacs-daemon-kill  emacs-daemon-new-frame  emacs-daemon-no-stdin  emacs-daemon-path-open  emacs-daemon-terminal  emacs-daemon.desktop  emacs-launchers.plugin.env.sh  emacs-launchers.plugin.zsh  env.sh  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
